<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_areas"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/areas" />
    <item
        android:id="@+id/nav_schedules"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/schedules" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/requests" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>